--- a/src/app/features/gis/components/policy/components/import-risks/import-risks.component.css
+++ b/src/app/features/gis/components/policy/components/import-risks/import-risks.component.css
@@ -48,5 +48,26 @@
     color: #00529B;
 }
 #templateButton{
-    width: 136%;
+    width: 146%;
 }
+
+
+/* Style the label to look like a button */
+.custom-file-upload {
+    display: inline-block;
+    padding: 6px ;
+    width: 140%;
+    cursor: pointer;
+    background-color: #00529B; /* Blue color */
+    color: #fff; /* White text color */
+    border: solid;
+    border-radius: 0.375rem;
+  }
+  
+  .custom-file-upload:hover {
+    background-image:#00529B;; /* Darker blue color on hover */
+  }
+
+  input[type="file"] {
+    display: none;
+  }
