--- a/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
+++ b/src/app/features/gis/components/policy/components/import-risks/import-risks.component.html
@@ -82,13 +82,24 @@
                                 <button type="button" class="btn btn-primary" id="templateButton" (click)="downloadCSVTemplate()" >{{'gis.policy.export_template' |
                                     translate}}</button>
                             </div>
-                            <div class="col-sm-3 me-4">
-                                <button type="button" class="btn btn-primary" id="templateButton" >{{'gis.policy.upload_template' |
-                                    translate}}</button>
+                            <div class="col-sm-3">
+                                <!-- <button type="button" class="btn btn-primary" id="templateButton" >{{'gis.policy.upload_template' |
+                                    translate}}</button> -->
+
+                                    <label for="fileInput" class="custom-file-upload mb-4">{{'gis.policy.upload_template' |translate}}</label>
+
+                                    <span *ngIf="uploading === 'progress'" class="mx-3">
+                                      <i class="pi pi-spin pi-spinner" style="color: #cccccc"></i>
+                                    </span>
+                                    <span *ngIf="uploading === 'success'" class="mx-1" style="color: #fff">
+                                      <!--<i class="pi pi-check" ></i>--> File uploaded
+                                    </span>
+                              
+                                    <input type="file" id="fileInput" accept=".csv" (change)="onFileSelected($event)">
                             </div>
                             <div class="col-sm-3" style="width:auto">
                                 <button type="button" id="icon" class="btn btn-success" data-bs-toggle="modal"
-                                    data-bs-target="#editPolicyRisk" title="add">
+                                    data-bs-target="#editPolicyRisk" title="add" style="margin-left: 77%;">
                                     <i class="fa-solid fa-pencil"></i>
                                 </button>
                             </div>
@@ -100,7 +111,7 @@
                             </div> -->
                             <div class="col-sm-3" style="width:auto">
                                 <button type="button" id="icon" class="btn btn-danger" data-bs-toggle="modal"
-                                    data-bs-target="#deletePolicyRisk" title="Delete">
+                                    data-bs-target="#deletePolicyRisk" title="Delete" style="margin-left: 77%;">
                                     <i class="fa-solid fa-trash-can"></i>
                                 </button>
                             </div>
@@ -110,7 +121,7 @@
 
                     </div>
                 </div>
-                <p-table  dataKey="code"
+                <p-table  dataKey="code" [value]="importedRisk"
                 [tableStyle]="{ 'min-width': '300px' }" [paginator]="true" selectionMode="single"
                  styleClass="p-datatable-sm"
                 responsiveLayout="scroll" class='ui-datatable' [autoLayout]="true" [rows]="10">
@@ -128,18 +139,18 @@
 
                     </tr>
                 </ng-template>
-                <ng-template pTemplate="body" >
+                <ng-template pTemplate="body" let-importedRisk >
                     <tr>
                        
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-
+                        <td>{{importedRisk.clientId}}</td>
+                        <td>{{importedRisk.clientName}}</td>
+                        <td>{{importedRisk.WEF}}</td>
+                        <td>{{importedRisk.WET}}</td>
+                        <td>{{importedRisk.riskDuplicated}}</td>
+                        <td>{{importedRisk.Class}}</td>
+                        <td>{{importedRisk.coverType}}</td>
+                        <td>{{importedRisk.Premium}}</td>
+                        <td>{{importedRisk.Taxes}}</td>
 
                     </tr>
                 </ng-template>
