ability to sign cheques, fms

--- a/src/app/features/fms/cheque-authorization/cheque-authorization.component.css
+++ b/src/app/features/fms/cheque-authorization/cheque-authorization.component.css
@@ -28,3 +28,42 @@
 table th {
   background: #f8f9fa;
 }
+
+ul.dropdown-menu {
+  border: solid 1px #eee;
+  border-radius: 5px;
+  padding: 0.5rem;
+}
+
+ul.dropdown-menu li {
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+ul.dropdown-menu li:hover {
+  font-size: 1.1em;
+  background: #eee;
+  transition: font-size 500ms;
+}
+.dropend .btn-link {
+  font-size: 0.9em;
+}
+.ticketLabel {
+  font-size: 16px;
+  font-weight: 400;
+  color: #000000;
+}
+
+.ticketDesc {
+  font-size: 16px;
+  font-weight: 500;
+  color: #000000;
+  margin-left: 5px;
+}
+.form-check-item {
+  clear: both; /* Ensures each item starts on a new line */
+}
+.form-check .form-label {
+  cursor: pointer;
+}
+
