UX review updates

--- a/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
+++ b/src/app/features/administration/components/tickets/authorization-tab/authorization-tab.component.html
@@ -76,7 +76,7 @@
         <th>{{'mngt_wrkflw.reinsurance.remarks' | translate }}</th>
         <th>{{'mngt_wrkflw.exceptions.setStandard' | translate }}</th>
         <th>{{'mngt_wrkflw.exceptions.usedStandard' | translate }}</th>
-        <th pSortableColumn="is_authorized" style="width:20%">{{'mngt_wrkflw.exceptions.authorized' | translate }}<p-sortIcon field="is_authorized"></p-sortIcon></th>
+        <th pSortableColumn="isAuthorized" style="width:20%">{{'mngt_wrkflw.exceptions.authorized' | translate }}<p-sortIcon field="isAuthorized"></p-sortIcon></th>
         <th>{{'mngt_wrkflw.exceptions.submissionDate' | translate }}</th>
         <th>{{'mngt_wrkflw.exceptions.authorizedBy' | translate }}</th>
         <th>{{'mngt_wrkflw.exceptions.authorizedDate' | translate }}</th>
