--- a/src/app/features/administration/components/tickets/ticket-details/claim-details/claim-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/claim-details/claim-details.component.html
@@ -245,135 +245,9 @@
 </div>
 
 <div class="mt-4 mb-2">
- <app-revision-details [selectedSpringTickets]="selectedSpringTickets"></app-revision-details>
-  <!--<div class="col-12 mt-2 mb-2">
-    <label class="text-primary">Exceptions</label>
-
-    <span class="icon-circle float-end"
-          data-bs-toggle="collapse" href="#collapseException" role="button" aria-expanded="false" aria-controls="collapseException"
-    ><i class="pi pi-chevron-down"></i
-    ></span>
-  </div>
-
-  <div class="collapse" id="collapseException">
-    <div class="col-12 d-flex justify-content-end mt-2 mb-2">
-      <div class="col-sm-12 col-md-6">
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Search by id, description"
-          aria-label="search"
-          aria-describedby="search"
-
-        />
-      </div>
-
-      <div class="col-sm-12 col-md-6 d-flex justify-content-end">
-        <button
-          class="btn btn-primary me-2" style="font-size: 12px;" (click)="makeReady()" [disabled]="isLoadingMakeUndo">
-          <span *ngIf="!isLoadingMakeUndo; else loadingMakeUndo">Make ready</span>
-          <ng-template #loadingMakeUndo>
-            <i class="pi pi-spin pi-spinner text-white" style="font-size: 2rem"></i>
-          </ng-template>
-        </button>
-        <button
-          class="btn btn-primary" style="font-size: 12px;" (click)="authoriseExceptions()" [disabled]="isLoadingAuthExc">
-          <span *ngIf="!isLoadingAuthExc; else loadingAuthExc">Authorise exceptions</span>
-          <ng-template #loadingAuthExc>
-            <i class="pi pi-spin pi-spinner text-white" style="font-size: 2rem"></i>
-          </ng-template>
-        </button>
-      </div>
-    </div>
-    <p-table
-      #claimsExceptionsTable
-      [autoLayout]="true"
-      [rowHover]="true"
-      [resizableColumns]="true"
-      [showCurrentPageReport]="true"
-      [rows]="pageSize || 5"
-      [totalRecords]="claimExceptionData?.length"
-      [value]="claimExceptionData"
-      [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
-      responsiveLayout="stack"
-      [scrollable]="true"
-      [(selection)]="selectedClaimException"
-      selectionMode="single"
-      dataKey="code"
-      scrollHeight="400px"
-      currentPageReportTemplate="{first} - {last} of {totalRecords}"
-      [globalFilterFields]="['description', 'code']"
-    >
-
-      <ng-template pTemplate="header">
-        <tr>
-          <th style="width:0.5rem;">
-            <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
-            &lt;!&ndash;        Select&ndash;&gt;
-          </th>
-          <th>{{'base.id' | translate }}</th>
-          <th>{{'mngt_wrkflw.policyDetails.description' | translate }}</th>
-          <th>{{'mngt_wrkflw.reinsurance.remarks' | translate }}</th>
-          <th>{{'mngt_wrkflw.exceptions.setStandard' | translate }}</th>
-          <th>{{'mngt_wrkflw.exceptions.usedStandard' | translate }}</th>
-          <th>{{'mngt_wrkflw.exceptions.authorized' | translate }}</th>
-          <th>{{'mngt_wrkflw.exceptions.submissionDate' | translate }}</th>
-          <th>{{'mngt_wrkflw.exceptions.authorizedBy' | translate }}</th>
-          <th>{{'mngt_wrkflw.exceptions.authorizedDate' | translate }}</th>
-          <th>{{'report.created_by' | translate }}</th>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="body" let-exception>
-        <tr>
-          <td>
-            <p-tableCheckbox [value]="exception"></p-tableCheckbox>
-          </td>
-          <td>{{exception.gis_exception_code}}</td>
-          <td>
-        <span *ngIf = "exception?.description" title="{{exception?.description}}">
-          {{exception?.description?.substring(0,10)}}...
-        </span>
-          </td>
-          <td>
-            <span title="{{exception?.underwriting_decision}}" (click)="toggleDropdown(exception)">
-            {{exception?.underwriting_decision?.substring(0,20) | titlecase }}
-          </span>
-
-            <ng-container *ngIf="!exception.underwriting_decision || showDropdownForException === exception">
-              <p-dropdown
-                [options]="completionRemarksData"
-                optionLabel="remark"
-                optionValue="remark"
-                id="code"
-                [filter]="true"
-                filterBy="remark"
-                [showClear]="true"
-                [style]="{ 'width': '130px', 'height': '40px' }"
-                placeholder="Select remark"
-                appendTo="body"
-                (onChange)="onDropdownChange($event, exception)"
-              >
-                <ng-template let-remark pTemplate="item">
-                  <div title="{{remark.remark}}">{{ remark.remark.length > 10 ? remark.remark.substring(0, 28) + '...' : remark.remark }}</div>
-                </ng-template>
-              </p-dropdown>
-            </ng-container>
-          </td>
-          <td>{{exception?.set_standard}}</td>
-          <td>{{exception?.used_standard}}</td>
-          <td>{{exception?.authorised}}</td>
-          <td>{{exception?.transactions_date}}</td>
-          <td>{{exception?.authorised_by}}</td>
-          <td>{{exception?.authorised_date}}</td>
-          <td>{{exception?.exception_by}}</td>
-        </tr>
-      </ng-template>
-      <ng-template pTemplate="emptymessage">
-        <tr>
-          <td colspan="11">No Exception Detail(s) Found.</td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div>-->
+ <app-revision-details
+   [selectedSpringTickets]="selectedSpringTickets"
+   [claimPaymentTransaction]="claimPaymentTransaction"
+ ></app-revision-details>
 </div>
 
