--- a/src/app/features/administration/components/tickets/ticket-details/tax-details/tax-details.component.css
+++ b/src/app/features/administration/components/tickets/ticket-details/tax-details/tax-details.component.css
@@ -1,10 +1,10 @@
 table thead tr td {
-  color: var(--primary-color);
+  color: #000;
   font-weight: bold;
 }
 table tbody tr th {
-  background: var(--primary-color);
-  color: #ffffff;
+  background: none;
+  color: #000;
 }
 
 table tbody tr td {
