--- a/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/gis/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -1115,7 +1115,7 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h6 class="mb-4">Documents</h6>
-                    <div class="row mt-3 g-3 align-items-center">
+                    <div class="row mt-3 mb-4 g-3 align-items-center">
                         <div class="col-auto">
                           <label for="documentTypes" class="col-form-label">Document Type</label>
                         </div>
@@ -1130,7 +1130,76 @@
                         </div>
                       </div>
 
-                      
+                      <div class="card" style="border: 2px dashed black;">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-center">
+                                <i class="pi pi-arrow-circle-up mb-4" style="font-size: 2.5rem"></i>
+                            </div>
+                            <p class="text-center">Drag and drop files to upload or browse</p>
+                            
+                        </div>
+                      </div>
+
+                      <!-- <p-fileUpload name="myfile[]" url="https://www.primefaces.org/cdn/api/upload.php" [multiple]="true" accept="image/*"  [maxFileSize]="1000000" (onUpload)="onTemplatedUpload()" (onSelect)="onSelectedFiles($event)">
+                        <ng-template pTemplate="buttonbar" let-files let-chooseCallback="chooseCallback" let-clearCallback="clearCallback" let-uploadCallback="uploadCallback">
+                            <div class="flex flex-wrap justify-content-between align-items-center flex-1 gap-2">
+                                <div class="flex gap-2">
+                                    <p-button (onClick)="choose($event, chooseCallback)" icon="pi pi-images" [rounded]="true" [outlined]="true" />
+                                    <p-button (onClick)="uploadEvent(uploadCallback)" icon="pi pi-cloud-upload" [rounded]="true" [outlined]="true" severity="success" [disabled]="!files || files.length === 0" />
+                                    <p-button (onClick)="clearCallback()" icon="pi pi-times" [rounded]="true" [outlined]="true" severity="danger" [disabled]="!files || files.length === 0" />
+                                </div>
+                                <p-progressBar [value]="totalSizePercent" [showValue]="false" styleClass="md:w-20rem h-1rem w-full md:ml-auto" [ngClass]="{ 'exceeded-progress-bar': totalSizePercent > 100 }">
+                                    <span class="white-space-nowrap">{{ totalSize }}B / 1Mb</span>
+                                </p-progressBar>
+                            </div>
+                        </ng-template> -->
+                        <!-- <ng-template pTemplate="content" let-files let-uploadedFiles="uploadedFiles" let-removeFileCallback="removeFileCallback" let-removeUploadedFileCallback="removeUploadedFileCallback">
+                            <div *ngIf="files?.length > 0">
+                                <h5>Pending</h5>
+                                <div class="flex flex-wrap p-0 sm:p-5 gap-5">
+                                    <div *ngFor="let file of files; let i = index" class="card m-0 px-6 flex flex-column border-1 surface-border align-items-center gap-3">
+                                        <div>
+                                            <img role="presentation" [alt]="file.name" [src]="file.objectURL" width="100" height="50" />
+                                        </div>
+                                        <span class="font-semibold">{{ file.name }}</span>
+                                        <div>{{ formatSize(file.size) }}</div>
+                                        <p-badge value="Pending" severity="warning" />
+                                        <div *ngFor="let file of files; let i = index">
+                                            <p-button 
+                                                icon="pi pi-times" 
+                                                (click)="onRemoveTemplatingFile($event, file, removeFileCallback, i)" 
+                                                [outlined]="true" 
+                                                [rounded]="true" 
+                                                severity="danger" />
+                                          </div>
+                                        <p-button icon="pi pi-times" (click)="onRemoveTemplatingFile($event, file, removeFileCallback, index)" [outlined]="true" [rounded]="true" severity="danger" />
+                                    </div>
+                                </div>
+                            </div>
+                            <div *ngIf="uploadedFiles?.length > 0">
+                                <h5>Completed</h5>
+                                <div class="flex flex-wrap p-0 sm:p-5 gap-5">
+                                    <div *ngFor="let file of uploadedFiles; let i = index" class="card m-0 px-6 flex flex-column border-1 surface-border align-items-center gap-3">
+                                        <div>
+                                            <img role="presentation" [alt]="file.name" [src]="file.objectURL" width="100" height="50" />
+                                        </div>
+                                        <span class="font-semibold">{{ file.name }}</span>
+                                        <div>{{ formatSize(file.size) }}</div>
+                                        <p-badge value="Completed" class="mt-3" severity="success" />
+                                        <p-button icon="pi pi-times" (onClick)="removeUploadedFileCallback(index)" [outlined]="true" [rounded]="true" severity="danger" />
+                                    </div>
+                                </div>
+                            </div>
+                        </ng-template> -->
+                        <!-- <ng-template pTemplate="file"> </ng-template>
+                        <ng-template pTemplate="empty">
+                            <div class="flex align-items-center justify-content-center flex-column">
+                                <i class="pi pi-cloud-upload border-2 border-circle p-5 text-8xl text-400 border-400"></i>
+                                <p class="mt-4 mb-0">Drag and drop files to here to upload.</p>
+                            </div>
+                        </ng-template> -->
+                    <!-- </p-fileUpload> -->
+                   
                 </div>
             </div>
         </div>
