VQ-1993-VQ-2076/Normal quote prod details, coverage and summary

--- a/src/app/features/lms/grp/components/dashboard/components/products/products.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/products/products.component.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="button-container">
                         <button class="learn-more" (click)="showProductOverview()">Learn more</button>
-                        <button class="get-quote">Get quote</button>
+                        <button class="get-quote" (click)="getQuote()">Get quote</button>
                     </div>
                 </div>
 
@@ -139,7 +139,7 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary">Get quote</button>
+                <button type="button" class="btn btn-primary" (click)="getQuote()">Get quote</button>
             </div>
         </div>
     </div>
