VQ-1564: consumed updated endpoint

--- a/src/app/features/crm/components/system-roles/system-roles.component.css
+++ b/src/app/features/crm/components/system-roles/system-roles.component.css
@@ -22,3 +22,11 @@
 .modal-footer {
   border-top: none;
 }
+
+.role-left .card {
+  /*height: 600px!important;*/
+}
+
+:host ::ng-deep .p-tabview {
+  /*height: 200px*/
+}
